syntax = "proto3";

package TransactionManager_LeaseManagerServiceProto;

import "LeaseType.proto";
import "google/protobuf/empty.proto";

message LeaseRequest {
	int32 slot = 1;
	Lease lease = 2;
}

message StatusUpdateResponse {
	int32 slot = 1;
	repeated Lease leases = 2;
}

service TransactionManager_LeaseManagerService {
	rpc Lease(LeaseRequest) returns (google.protobuf.Empty);
	rpc StatusUpdate(google.protobuf.Empty) returns (StatusUpdateResponse);
}